Changelog
=========

3.2 (unreleased)
-----

  * Make the plugin appears in quick installer [ivanteoh]
  * Support unicode [ivanteoh] 
  * Fix the total of replaced instances [ivanteoh]

3.1
-----

  * Updated translation files [blambert555]
  * Added updated Spanish translation [blambert555] 
  * Added updated Brazilian Porteguese translations [blambert555]

2.0/2.1
-------

  * Updated for Plone 4. All forms and functionality completely refactored and brought up to date. [blambert555]

1.0.1
----------------

  * Updating licensing information


1.0
----------------

  * Initial release
