@@ -22,6 +22,10 @@
      factory=".searchreplaceutility.SearchReplaceUtility"
      />
 
+  <class class="Products.CMFPlone.Portal.PloneSite">
+    <implements interface="collective.searchandreplace.interfaces.ISearchReplaceable" />
+  </class>
+
   <class class="Products.ATContentTypes.content.document.ATDocument">
     <implements interface="collective.searchandreplace.interfaces.ISearchReplaceable" />
   </class>
