@@ -136,7 +136,11 @@ class SearchReplaceUtility(object):
                         replaced += result[0]
                         obj.aq_base.setDescription(result[1])
             if mobjs.has_key('body'):
-                body = _to_unicode(obj.aq_base.getText())
+                baseunit = obj.getField('text').getRaw(obj, raw=True)
+                if isinstance(baseunit.raw, unicode):
+                    body = baseunit.raw
+                else:
+                    body = _to_unicode(obj.aq_base.getRawText())
                 if body:
                     result = self._replaceText(matcher,
                                                body,
@@ -165,7 +169,11 @@ class SearchReplaceUtility(object):
                     replaced += result[0]
                     obj.setDescription(result[1])
             if getattr(obj.aq_base, 'getText', None):
-                body = _to_unicode(obj.aq_base.getText())
+                baseunit = obj.getField('text').getRaw(obj, raw=True)
+                if isinstance(baseunit.raw, unicode):
+                    body = baseunit.raw
+                else:
+                    body = _to_unicode(obj.aq_base.getRawText())
                 if body:
                     result = self._replaceText(matcher,
                                                body,
@@ -226,7 +234,11 @@ class SearchReplaceUtility(object):
                                                     start, 
                                                     end),})
         if getattr(obj.aq_base, 'getText', None):
-            text = _to_unicode(obj.aq_base.getText())
+            baseunit = obj.getField('text').getRaw(obj, raw=True)
+            if isinstance(baseunit.raw, unicode):
+                text = baseunit.raw
+            else:
+                text = _to_unicode(obj.aq_base.getRawText())
             mobj = matcher.finditer(text)
             for x in mobj:
                 start, end = x.span()
